# icegate-be-message-parser

./: .gitignore  README.md  pyproject.toml
CACH101/specification/: __init__.py  specification.py
CACH101/table_be/: __init__.py
CACH101/table_be/models/: be_model.py
CACH101/table_be/serializer/: be_serializer.py  verify_be_serializer.py
CACH101/table_exchange/: __init__.py
CACH101/table_exchange/models/: exchange_model.py
CACH101/table_exchange/serializer/: __init__.py  exchange_serializer.py
CACH101/table_permission/models/: permission_model.py
CACH101/table_permission/serializer/: permission_serializer.py  verify_permission_serializer.py
example/: simple_main.py
exchange_parser/: parser.py
exchange_parser/CACH101/: __init__.py
exchange_parser/CACH101/Specification/: specification.py
exchange_parser/CACH101/serializer/: exchange_serializer.py
exchange_parser/CACH101/specification/: specification.py
exchange_parser/CACH101/table_exchange/serializer/: exchange_serializer.py
exchange_parser/helpers/: validation.py
exchange_parser/serializer/: exchange_serializer.py
