[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exchange-parser"
version = "0.1.0"
description = "Parser for Indian Customs EXCHANGE (.be) format"
authors = [{ name="Hemanth Gowda" }]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/hemanth-gowda-96/icegate-be-message-parser.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["exchange_parser*"]
